# MasterThesis

./: notes.txt
Code/: CMakeLists.txt  FindCCV.cmake  FindTesseract.cmake
Code/include/: CURLWrapper.h  LM_algorithm.hpp  LM_algorithm.hpp~  VL_algorithm.hpp  VL_algorithm.hpp~  ccv.hpp  initWorld.hpp~  init_world.hpp  init_world.hpp~  main.hpp  main.hpp~  wordMap.hpp  wordMap.hpp~
Code/src/: CURLWrapper.cpp  CURLWrapper.cpp~  LM_algorithm.cpp  LM_algorithm.cpp~  VL_algorithm.cpp  VL_algorithm.cpp~  evaluate_results.cpp  evaluate_results.cpp~  initWorld.cpp~  init_world.cpp  init_world.cpp~  main.cpp  main.cpp~  map_parser.cpp  map_parser.cpp~  matcher.cpp  nm_algorithm.cpp  nm_algorithm.cpp~  test.cpp  test.cpp~  trained_classifierNM1.xml  trained_classifierNM2.xml  trained_classifier_erGrouping.xml  wordMap.cpp
Code/visualization/: main.cpp  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  visualization.pro
Dataset2/: map.html  map.html~  nearbyData.txt  odometry.dat~
Dataset3/: map.html  nearbyData.txt
Dataset4/: map.html  map.html~  nearbyData.txt  odometry.dat~
Dataset5/: map.html  map.html~  nearbyData.txt  odometry.dat~
London_Dataset1/: map.html  nearbyData.txt  odometry.dat~
London_Dataset2/: map.html  nearbyData.txt  odometry.dat~
London_Dataset3/: map.html  nearbyData.txt
London_Dataset4/: map.html  nearbyData.txt  odometry.dat~  template.html
London_Dataset5/: map.html  nearbyData.txt  odometry.dat~
London_Dataset6/: map.html  nearbyData.txt  odometry.dat~
TestRun/: map.html  map.html~  nearbyData.txt  odometry.dat~  odometry2.dat~  sensor_data.dat~  template.html~
